TwitterCards/Presentation/CSS/Demo.less
.tweet-container {
	clear: right;
}

.tweet-card {
	-webkit-transition: translate3d(0,0,0);
	cursor: pointer;
	margin: 20px 0 0 20px;
	overflow: hidden;
	display: inline-block;
	padding: 0 1px 3px;

	.inner {
		overflow: hidden;
		border-bottom: 6px solid white;
		width: 300px;
		height: 180px;
		.drop-shadow;
		.border-radius;
		background: white;
		margin-top: 24px;
	}

	.profile-image {
		position: absolute;
		right: 10px;
		top: 0;
		.border-radius(24px);
		.drop-shadow;
	}

	.tweet-author {
		font-weight: 900;
		margin-bottom: 8px;
		padding: 10px;
		background: #c6cacb;
		.border-radiuses(3px, 0, 0, 3px);
	}

	.tweet-text {
		font-size: 16px;
		padding: 10px;
		color: #777;
		background: white;
	}

	.tweet-image {
		position: absolute;
		bottom: 10px;
		right: 12px;
		.opacity(0.3);
	}
}

.loading {
	margin: 20px;
	text-align: center;
	font-size: 18px;
}

.tweet-detail {
	display: none;
	position: fixed;
	top: 150px;
	width: 600px;
	margin: 0 auto;
	left: 0;
	right: 0;
	.drop-shadow(0, 1px, 1px, 0, 0.8);
	.border-radius;
	background: white;
	z-index: 999;
	padding: 14px;

	.profile-image {
		vertical-align: top;
	}

	.inner {
		width: 526px;
		display: inline-block;
		margin: 10px 0 14px;

		.tweet-author {
			margin-bottom: 10px;
			font-weight: 900;

			.screenname {
				color: #ccc;
			}
		}
	}

	.tweet-image {
		background: black;
		clear: right;

		img {
			margin: 0 auto;
			display: block;
			height: 300px;
			max-width: 600px;
		}
	}
}

.mask
{
	height: 100%;
	width: 100%;
	position: fixed;
	left: 0;
	top: 0;
	z-index: 99 !important;
	background-color: black;
	.opacity(0);
}

.opacity (@opacity: 0.5) {
	-webkit-opacity: 	@opacity;
	-moz-opacity: 		@opacity;
	opacity: 		@opacity;
}

.drop-shadow (@x: 0, @y: 1px, @blur: 1px, @spread: 0, @alpha: 0.25) {
	-webkit-box-shadow:	@x @y @blur @spread rgba(0, 0, 0, @alpha);
	-moz-box-shadow:	@x @y @blur @spread rgba(0, 0, 0, @alpha);
	box-shadow:		@x @y @blur @spread rgba(0, 0, 0, @alpha);
}

.border-radius (@radius: 3px) {
	-webkit-border-radius: @radius;
	-moz-border-radius:    @radius;
	border-radius:         @radius;

	-moz-background-clip:    padding;
	-webkit-background-clip: padding-box;
	background-clip:         padding-box;
}

.border-radiuses (@topright: 0, @bottomright: 0, @bottomleft: 0, @topleft: 0) {
	-webkit-border-top-right-radius:    @topright;
	-webkit-border-bottom-right-radius: @bottomright;
	-webkit-border-bottom-left-radius:  @bottomleft;
	-webkit-border-top-left-radius:     @topleft;

	-moz-border-radius-topright:        @topright;
	-moz-border-radius-bottomright:     @bottomright;
	-moz-border-radius-bottomleft:      @bottomleft;
	-moz-border-radius-topleft:         @topleft;

	border-top-right-radius:            @topright;
	border-bottom-right-radius:         @bottomright;
	border-bottom-left-radius:          @bottomleft;
	border-top-left-radius:             @topleft;

	-moz-background-clip:    padding; 
	-webkit-background-clip: padding-box; 
	background-clip:         padding-box; 
}

